# UOE-mlp-cw-G083

./: .gitignore  DATA_QUALITY_REPORT.md  README.md  REPORT.md  RESULTS.md  analysis.md  config.yaml  data_quality_analysis.py  data_review_issues.md  pyproject.toml  requirements-grpo.txt  requirements.txt
data/: all_filters.json  data.json  test.json  train.json
docs/: training_method.txt
schemas/: ab_test_results.json  adidas_vs_nike.json  air_purifier.json  airbnb_open_data.json  airline_delays.json  airport_lounges.json  amazon_products.json  anime.json  apartment_rentals.json  aquarium_fish.json  aquariums_fish.json  arcade_games.json  archery_equipment.json  art_gallery.json  assembly_line_errors.json  astronomy_observations.json  bakery_products.json  bank_transactions.json  barbershops.json  beekeeping_supplies.json  bicycle_parts.json  bicycle_shop.json  bitcoin_transactions.json  board_games copy.json  board_games.json  board_games_catalog.json  books.json  bouldering_gyms.json  brewery_beers.json  camping_gear.json  camping_sites.json  candle_products.json  candle_shop.json  candy_products.json  car_insurance.json  car_wash.json  carpet_products.json  cat_cafes.json  ceramics_glazes.json  ceramics_market.json  (+208 more)
schemas/archive/: airbnb_open_data.json  data_science_salaries.json  f1_race_results.json  olympic_athletes.json  university_rankings.json
scripts/: compare_checkpoints.py  eval_all.sh  eval_baselines.sh  patch_trl.py  plot_results.py  run_all.sh  setup.sh  train_all.sh
src/: __init__.py  cli.py  config.py  data_loader.py  inference.py  train.py  train_grpo.py  training_utils.py
src/evaluate/: __init__.py  base.py  complexity_accuracy.py  cross_schema_hallucination.py  exact_match.py  f1.py  field_accuracy.py  hallucination.py  latency.py  parsing.py  (+7 more)
