[project]
name = "autofilter"
version = "0.1.0"
description = "Fine-tune LLMs to convert natural language queries into structured filter expressions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "trl>=0.18.2,<=0.24.0",    # unsloth_zoo requires trl<=0.24.0
    "transformers>=5.3.0",
    "peft>=0.18.1",
    "datasets>=4.7.0",
    "accelerate>=1.13.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.0",
    "wandb>=0.25.0",
    "bitsandbytes>=0.49.0",
    "tqdm>=4.67.0",
    "huggingface-hub>=1.6.0",
    "tensorboard>=2.20.0",
    # unsloth must be installed separately — see install command below
]