[project]
name = "autofilter"
version = "0.1.0"
description = "Fine-tune LLMs to convert natural language queries into structured filter expressions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "trl>=0.18.2,<=0.24.0",        # unsloth_zoo requires trl<=0.24.0
    "transformers>=4.51.3,<=5.3.0", # unsloth_zoo upper bound
    "peft>=0.18.0",
    "datasets>=3.4.1,<4.4.0",       # unsloth_zoo requires datasets<4.4.0
    "accelerate>=0.34.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.0",
    "wandb>=0.25.0",
    "bitsandbytes>=0.49.0",
    "tqdm>=4.67.0",
    "huggingface-hub>=1.6.0",
    "tensorboard>=2.20.0",
]

# Install unsloth + flash-attn manually on GPU server:
#   pip install "unsloth[cu124-ampere-torch260] @ git+https://github.com/unslothai/unsloth.git"
#   pip install flash-attn --no-build-isolation